--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         // You can easily add, remove, or edit accounts in this list.
         const accounts = [
             {
-                name: "Henry meng verschueren",
+                name: "Henry Meng Verschueren",
                 cvc: "472",
                 ctrn: "6912",
-                balance: 5.00
+                balance: 2.00
             },
             // To add a new account, copy the block above and paste it here.
             // {
