--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
                 ctrn: "6912",
                 balance: 2.00
             },
+            {
+                name: "Alexander Drake Verschueren",
+                cvc: "090",
+                ctrn: "2012",
+                balance: 6969.00
+            },
             // To add a new account, copy the block above and paste it here.
             // {
             //     name: "New User",
